--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -16,7 +16,7 @@
   h6 { font-size: 0.85em; }
 
   /* Links */
-  a {
+  /* a {
     color: hsl(var(--primary));
     text-decoration: none;
     transition: all 0.2s ease-out;
@@ -24,7 +24,7 @@
   a:hover {
     text-decoration: underline;
     opacity: 0.8;
-  }
+  } */
 
   /* Lists */
   ul, ol {
